# LILRpalooza

./: README.md
docker/: Dockerfile  build.sh  run.sh
server/: Cargo.toml
server/ref_data/: CDC42EP5_prot.fa  LAIR1_prot.fa  LAIR2_prot.fa  LENG8_prot.fa  LENG9_prot.fa  LILRA1_prot.fa  LILRA2_prot.fa  LILRA3_prot.fa  LILRA4_prot.fa  LILRA5_prot.fa  LILRA6_prot.fa  LILRB1_prot.fa  LILRB2_prot.fa  LILRB3_prot.fa  LILRB4_prot.fa  LILRB5_prot.fa  TTYH1_prot.fa
server/src/: main.rs
server/templates/: app_page.html
server/tests/: test.fa  test0.sh  test1.py  test1.sh  test2.sh
