[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.115"
futures-util = "0.3.30"
futures = "0.3.30"
tron_app = {git = "https://github.com/cschin/tron.git"}
askama = "0.12.1"
bytes = "1.6.0"
flate2 = "1.0.30"
tower-sessions = "0.14.0"
once_cell = "1.19.0"
tempfile = "3.6"
reqwest = { version = "0.11", features = ["json", "rustls-native-certs"] }
